--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,15 @@ build-backend = "hatchling.build"
 name = "termi"
 version = "0.1.0"
 description = "Local-LLM terminal copilot that turns natural language into shell commands."
-readme = "README.md"
+readme = "README.md"                    
 license = { file = "LICENSE" }
-authors = [{ name = "Your Name", email = "you@example.com" }]
+authors = [{ name = "Abhay Mundhara", email = "abhay.mundhara@gmail.com" }]
 requires-python = ">=3.9"
 dependencies = []
 keywords = ["terminal", "llm", "ollama", "copilot"]
 classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
@@ -26,10 +25,20 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourname/termi"
-Issues = "https://github.com/yourname/termi/issues"
+Homepage = "https://github.com/abhaymundhara/Termi"
+Issues = "https://github.com/abhaymundhara/Termi/issues"
 
 [project.scripts]
 termi = "termi.cli:main"
 
----
+# Tell Hatchling we're using a src/ layout
+[tool.hatch.build.targets.wheel]
+packages = ["src/termi"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "src/termi",
+  "pyproject.toml",
+  "LICENSE",
+  "README.txt",
+]
