--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling>=1.24"]
 build-backend = "hatchling.build"
 
 [project]
-name = "termi"
+name = "termi-copilot"
 version = "0.1.0"
 description = "Local-LLM terminal copilot that turns natural language into shell commands."
 readme = "README.md"                    
