--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,19 @@ build-backend = "hatchling.build"
 
 [project]
 name = "termi-copilot"
-version = "0.1.0"
-description = "Local-LLM terminal copilot that turns natural language into shell commands."
-readme = "README.md"                    
+version = "0.3.0"
+description = "Local-LLM terminal copilot that turns natural language into safe shell commands."
+readme = "README.md"
 license = { file = "LICENSE" }
 authors = [{ name = "Abhay Mundhara", email = "abhay.mundhara@gmail.com" }]
 requires-python = ">=3.9"
-dependencies = []
-keywords = ["terminal", "llm", "ollama", "copilot"]
+dependencies = [
+  "rich>=13.7",
+  "prompt-toolkit>=3.0",
+  "click>=8.1",
+  "pyperclip>=1.8",
+]
+keywords = ["terminal", "llm", "ollama", "copilot", "shell", "ai"]
 classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3",
@@ -19,25 +24,32 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
-  "Operating System :: MacOS",
-  "Operating System :: POSIX :: Linux",
+  "Programming Language :: Python :: 3.13",
+  "Topic :: System :: Shells",
+  "Topic :: Utilities",
   "Environment :: Console",
 ]
 
-[project.urls]
-Homepage = "https://github.com/abhaymundhara/Termi"
-Issues = "https://github.com/abhaymundhara/Termi/issues"
+[project.optional-dependencies]
+dev = ["pytest>=7", "ruff>=0.1", "mypy>=1.5"]
 
 [project.scripts]
 termi = "termi.cli:main"
 
+[project.urls]
+Homepage = "https://github.com/abhaymundhara/Termi"
+Repository = "https://github.com/abhaymundhara/Termi"
+Issues = "https://github.com/abhaymundhara/Termi/issues"
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/termi"]
 
-[tool.hatch.build.targets.sdist]
-include = [
-  "src/termi",
-  "pyproject.toml",
-  "LICENSE",
-  "README.md",
-]
+[tool.ruff]
+line-length = 100
+target-version = "py39"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
